[project]
name = "javiz"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "discord-py>=2.4.0",
    "fastapi>=0.112.0",
    "uvicorn>=0.30.6",
    "pynacl>=1.5.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.2",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "python-dotenv>=1.0.1",
]

[tool.rye.scripts]
dev = "python src/javiz/main.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/javiz"]
